# matplotlib

./: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
mplcatppuccin/: __init__.py  palette.py  plots.py
mplcatppuccin/data/: catppuccin.mplstyle  catppuccin_template.txt  frappe.mplstyle  latte.mplstyle  macchiato.mplstyle  mocha.mplstyle
scripts/: create_example_plots.py
src/mplcatppuccin/: __init__.py  colormaps.py  plots.py
src/mplcatppuccin/data/: palettes.json
